# minesweeper

./: .gitattributes  .gitignore  CMakeLists.txt
docs/: building.txt
release/: license.txt
release/data/: .gitkeep
src/: main.cpp
